--- a/templates/bookings.html
+++ b/templates/bookings.html
@@ -39,7 +39,7 @@
             </nav>
         </aside>
         <main class="col bg-faded py-3 flex-grow-1">
-            <h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL BOOKINGS</h1>
+            <h1 class="headings" style="text-align: center; border-radius:30px; padding: 20px; ">ALL BOOKINGS</h1>
             <table border =1 class="customers">
                 <tr>
                   <th>Booking ID</th>
