--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -47,9 +47,8 @@
     /*background: #d4b4a8;*/
     /*background: #e44c65; pink */
     /*background: #312d2e;*/
-    background: #222;
-    opacity: 0.8;
-    
+    /*background: #222;*/
+    opacity: 0.8;    
 }
 .clas{
   padding-bottom: 200px;
