--- a/templates/employees.html
+++ b/templates/employees.html
@@ -64,7 +64,7 @@
   }
   .headings{
     text-align: center; 
-    background-color: #fcf8e3; 
+    /*background-color: #fcf8e3; */
     border-radius:30px; 
     padding: 20px; 
   }
@@ -161,7 +161,7 @@
             </nav>
         </aside>
         <main class="col bg-faded py-3 flex-grow-1">
-            <h1 class="headings" style="text-align: center; background-color: #fcf8e3; border-radius:30px; padding: 20px; ">ALL EMPLOYEES</h1>
+            <h1 class="headings" style="text-align: center; border-radius:30px; padding: 20px; ">ALL EMPLOYEES</h1>
             <table border =1 class="customers">
                 <tr>
                   <th>Employee ID</th>
