--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -61,7 +61,7 @@
     opacity: 0.8;
 }
 .bg{
-  background-image: url("img/bg2.jpg");
+  background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});
   background-repeat: no-repeat;
   background-size:cover;
 }
