--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -38,7 +38,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <a class="navbar-brand glow" href="#">TourWithUs</a>
+      <a class="navbar-brand glow" href="http://localhost:5000/aboutus">TourWithUs</a>
     <ul class="nav navbar-nav navbar-right">
       <li class="nav-item active">
         <a class="nav-link" href="http://localhost:5000/home">Home <span class="sr-only">(current)</span></a>
