--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -38,8 +38,11 @@
     padding-top: 50px; 
    
 }
+.card{
+background:#222;
+opacity: 0.3;
+}
 .card-body{
-  background:transparent;
   color: #ececec;
 }
 .col:first-child{
@@ -98,7 +101,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <a class="navbar-brand glow" href="#">TourWithUs</a>
+            <a class="navbar-brand glow" href="http://localhost:5000/aboutus">TourWithUs</a>
             <!--
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
