--- a/templates/packages.html
+++ b/templates/packages.html
@@ -5,7 +5,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        .bg{
+        background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});
+        background-repeat: no-repeat;
+        background-size:cover;
+      }
+    </style>
 </head>
+
 <body>
   <div class="bg">
     <div class="container-fluid">
@@ -15,10 +23,10 @@
               <div class="collapse navbar-collapse ">
                   <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
                       <li class="nav-item active">
-                          <a class="nav-link pl-0 text-nowrap glow" href="#"> <span class="font-weight-bold">TourWithUs</span></a>
+                          <a class="nav-link pl-0 text-nowrap glow" href="http://localhost:5000/aboutus"> <span class="font-weight-bold">TourWithUs</span></a>
                       </li>
                       <li class="nav-item active">
-                        <a class="nav-link" href="#"> <span class="d-none d-md-inline">Home</span></a>
+                        <a class="nav-link" href="http://localhost:5000/home"> <span class="d-none d-md-inline">Home</span></a>
                     </li>                        
                       <li class="nav-item active">
                           <a class="nav-link " href="http://localhost:5000/all_packages"> <span class="d-none d-md-inline">Packages</span></a>
