--- a/templates/Add_employee.html
+++ b/templates/Add_employee.html
@@ -1,10 +1,19 @@
 <head>
 		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+	    <style>
+        .bg{
+        background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});
+        background-repeat: no-repeat;
+        background-size:cover;
+        padding-bottom: 500px;
+      }
+    </style>
 </head>
-<div class="content">
+<div class="content bg">
 	<h1 class="headings">ADD EMPLOYEE</h1>
 	<br>
 	<br>
+	<div class="temp1">
 	<form method="POST" action="">
 		<label >Employee ID </label>
 		<br>
@@ -24,4 +33,5 @@
 		<br>
 		<input type="submit">
 	</form>
+	</div>
 </div>
