--- a/templates/Add_package.html
+++ b/templates/Add_package.html
@@ -1,10 +1,19 @@
 <head>
 		<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/styles.css') }}">
+	    <style>
+        .bg{
+        background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});
+        background-repeat: no-repeat;
+        background-size:cover;
+        padding-bottom: 100px;
+      }
+    </style>
 </head>
-<div class="content">
+<div class="content bg">
 	<h1 class="headings">ADD PACKAGE</h1>
 	<br>
 	<br>
+	<div class="temp1" >
 	<form method="POST" action="">
 		<label >Package ID </label>
 		<br>
@@ -32,4 +41,5 @@
 		<br>
 		<input type="submit">
 	</form>
+	</div>
 </div>
