--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -9,6 +9,14 @@
   <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <style>
+  
+      .bg{
+      /*background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});*/
+      background-image: url("bg2.jpg");
+      background-repeat: no-repeat;
+      background-size:cover;
+    }
+  
     .body {
       color: var(--mainBlack);
       font-family: "Lato", sans-serif;
@@ -26,12 +34,38 @@
       opacity: 0.8;
     }
     .card{
-      padding: 10px;
+      color: aliceblue;
       margin: 10px;
+      padding: 0;
+      background-color: #222;
+      border-radius: 10px;
+     
+      width: 300px;
+    }
+    .card-title, .btn, .h2, .center{
+      text-align: center;
+    }
+    .card-body{
+      background-color: #222;
+      opacity: 0.8;
+    }
+    .container-fluid{
+      padding-bottom: 200px;
+      padding-left: 40px;
+    }
+    .img{
+      height: 20rem;
+      
+    }
+    .card:hover{
+      color: rgba(255, 255, 255, 1);
+      /*box-shadow: 0 15px 15px rgba(0,0,0, .8);*/
+      box-shadow: 0 15px 15px rgba(17, 16, 16, 0.8);
     }
   </style>
 </head>
 <body>
+  <div class="bg">
   <nav class="navbar transparent navbar-fixed-top navbar-expand-lg navbar-dark static-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -47,51 +81,53 @@
 
   </nav>
  
-<div class="container">
-  <h2>About Us</h2>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <div class="card" style="width:400px">
-          <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
-          <div class="card-body">
-            <h4 class="card-title">Kiran</h4>
-            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
+  <div class="container-fluid">
+    <br>
+    <h2 class="center">About Us</h2>
+    
+      <div class="row">
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top img" src="kiran.jpeg" alt="Card image" style="width:100%;" >
+            <div class="card-body center">
+              <h4 class="card-title">Kiran</h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-light ">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top img" src="sanjana.jpeg" alt="Card image" style="width:100%;">
+            <div class="card-body center">
+              <h4 class="card-title">Sanjana</h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-light">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top img" src="shriya.jpeg" alt="Card image" style="width:100%; height: 20rem;">
+            <div class="card-body center">
+              <h4 class="card-title">Shriya</h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-light">See Profile</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card">
+            <img class="card-img-top img" src="{{url_for('static', filename='img/rish.jpeg')}}" alt="Card image" style="width:100%;">
+            <div class="card-body center">
+              <h4 class="card-title">Rishitha</h4>
+              <p class="card-text"></p>
+              <a href="#" class="btn btn-light">See Profile</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-sm">
-        <div class="card" style="width:400px">
-          <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
-          <div class="card-body">
-            <h4 class="card-title">Sanjana</h4>
-            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="card" style="width:400px">
-          <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
-          <div class="card-body">
-            <h4 class="card-title">Shriya</h4>
-            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm">
-        <div class="card" style="width:400px">
-          <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
-          <div class="card-body">
-            <h4 class="card-title"><Rishitha></Rishitha></h4>
-            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-            <a href="#" class="btn btn-primary">See Profile</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    
   </div>
 </div>
 
