--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -11,7 +11,7 @@
   <style>
   
       .bg{
-      /*background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});*/
+      background-image: url({{ url_for('static', filename = '/img/bg2.jpg')}});
       background-image: url("bg2.jpg");
       background-repeat: no-repeat;
       background-size:cover;
