--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-sm">
           <div class="card">
-            <img class="card-img-top img" src="kiran.jpeg" alt="Card image" style="width:100%;" >
+            <img class="card-img-top img" src="{{url_for('static', filename='img/kiran.jpeg')}}" alt="Card image" style="width:100%;">
             <div class="card-body center">
               <h4 class="card-title">Kiran</h4>
               <p class="card-text"></p>
@@ -98,7 +98,7 @@
         </div>
         <div class="col-sm">
           <div class="card">
-            <img class="card-img-top img" src="sanjana.jpeg" alt="Card image" style="width:100%;">
+            <img class="card-img-top img" src="{{url_for('static', filename='img/sanjana.jpeg')}}" alt="Card image" style="width:100%;">
             <div class="card-body center">
               <h4 class="card-title">Sanjana</h4>
               <p class="card-text"></p>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-sm">
           <div class="card">
-            <img class="card-img-top img" src="shriya.jpeg" alt="Card image" style="width:100%; height: 20rem;">
+            <img class="card-img-top img" src="{{url_for('static', filename='img/shriya.jpeg')}}" alt="Card image" style="width:100%;">
             <div class="card-body center">
               <h4 class="card-title">Shriya</h4>
               <p class="card-text"></p>
